--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Source+Sans+Pro|Supermercado+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="resume.css">
     <title>Super Todo | React</title>
 </head>
 <body>
