--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Source+Sans+Pro|Supermercado+One&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css " rel="stylesheet">
     <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="utilities.css">
     <title>Super Todo | React</title>
 </head>
 <body>
