--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css " rel="stylesheet">
     <link rel="stylesheet" href="resume.css">
     <link rel="stylesheet" href="utilities.css">
-    <title>Super Todo | React</title>
+    <title>Sandeep Namdev</title>
 </head>
 <body>
     <div id="root"></div>
